loopfor.LoopStairs.scala.error
Compilation error:
LoopStairs:1: error: value unary_! is not a member of Unit
while (!setPos(14,8)) {
       ^