loopfor.LoopStairs.scala.code
while (!setPos(14,8)) {
  if (!isFacingWall()){
    forward()
    forward()
    forward()
  }
  else {
    left()
    forward()
    right()
    forward()
  }
}